[gd_scene load_steps=4 format=3 uid="uid://cc65uf8d6ov47"]

[ext_resource type="Script" path="res://src/scenes/TitleScreen.gd" id="1_bry7n"]
[ext_resource type="Script" path="res://src/gui/SfxButton.gd" id="2_w2rp5"]
[ext_resource type="PackedScene" uid="uid://dvp2vq4xjs5cs" path="res://src/scenes/Arena1.tscn" id="3_2qwh1"]

[node name="TitleScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bry7n")

[node name="Arena1" parent="." instance=ExtResource("3_2qwh1")]

[node name="player1" parent="Arena1" index="2"]
Invincible = true

[node name="AiComponent" parent="Arena1/player1" index="3"]
enabled = true

[node name="player2" parent="Arena1" index="3"]
Invincible = true

[node name="AiComponent" parent="Arena1/player2" index="3"]
enabled = true

[node name="GameState" parent="Arena1" index="6"]
Ingame = false

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.323652, 0, 0.0121751, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="GameTitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
anchor_top = 0.208904
anchor_right = 1.0
anchor_bottom = 0.285959
size_flags_vertical = 6
theme_override_font_sizes/font_size = 32
text = "LCNC - Project"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
anchor_left = 0.367647
anchor_top = 0.479452
anchor_right = 0.632353
anchor_bottom = 0.868151
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
focus_neighbor_left = NodePath("../ExitButton")
focus_neighbor_top = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../OptionsButton")
focus_next = NodePath("../OptionsButton")
focus_previous = NodePath("../ExitButton")
text = "Play"
script = ExtResource("2_w2rp5")

[node name="OptionsButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
focus_neighbor_left = NodePath("../PlayButton")
focus_neighbor_top = NodePath("../PlayButton")
focus_neighbor_right = NodePath("../AboutButton")
focus_neighbor_bottom = NodePath("../AboutButton")
focus_next = NodePath("../AboutButton")
focus_previous = NodePath("../PlayButton")
text = "Options
"
script = ExtResource("2_w2rp5")

[node name="AboutButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
focus_neighbor_left = NodePath("../OptionsButton")
focus_neighbor_top = NodePath("../OptionsButton")
focus_neighbor_right = NodePath("../ExitButton")
focus_neighbor_bottom = NodePath("../ExitButton")
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../OptionsButton")
text = "About"
script = ExtResource("2_w2rp5")

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 5
size_flags_vertical = 3
focus_neighbor_left = NodePath("../AboutButton")
focus_neighbor_top = NodePath("../AboutButton")
focus_neighbor_right = NodePath("../PlayButton")
focus_neighbor_bottom = NodePath("../PlayButton")
focus_next = NodePath("../PlayButton")
focus_previous = NodePath("../AboutButton")
text = "Exit"
script = ExtResource("2_w2rp5")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/AboutButton" to="." method="_on_about_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]

[editable path="Arena1"]
[editable path="Arena1/player1"]
[editable path="Arena1/player1/player_model"]
[editable path="Arena1/player2"]
[editable path="Arena1/player2/player_model"]
